--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   },
   "devDependencies": {
     "@types/react-scroll": "^1.8.10",
-    "gh-pages": "^6.1.0"
+    "gh-pages": "^6.1.0",
+    "tailwindcss": "^3.4.1"
   }
 }
